--- a/HomeWork2/HW_12/HW_12.csproj
+++ b/HomeWork2/HW_12/HW_12.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\HW_11\Methods.cs">
+      <Link>Methods.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
