--- a/HomeWork2/HW_14/HW_14.csproj
+++ b/HomeWork2/HW_14/HW_14.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E7BF3BAE-531C-4111-BF4C-12427EF9A33E}</ProjectGuid>
+    <ProjectGuid>{E17B6F1D-1B5A-474B-B43A-1ED870B7741A}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>HW_11</RootNamespace>
-    <AssemblyName>HW_11</AssemblyName>
+    <RootNamespace>HW_14</RootNamespace>
+    <AssemblyName>HW_14</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Methods.cs" />
+    <Compile Include="..\HW_11\Methods.cs">
+      <Link>Methods.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
